external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_with_named_struct_field.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/positional_with_named_struct_field.move:4:23
  │
4 │     public struct Foo(f: u64) has copy, drop;
  │                       ^ Cannot use named fields here

