external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_with_named_struct_field.move
address 0x42 {
module M {
    // Invalid positional field struct declaration
    public struct Foo(f: u64) has copy, drop;
}
}
